Adds support for Java 11 runtime
GH-17